4.7.x
=====

- Query HAL to be sure suspend and hibernate are supported.  If not,
  don't even show the buttons (bug 4952).

4.6.1
=====

- Fix crash in settings dialog when a .desktop file with a missing
  Application key is opened (bug 5020).
- Ensure networked session handling over TCP is disabled by
  default (bug 5126).

4.6.0
=====

- Respect the ICEAUTHORITY env var (bug 4369).
- Fix sudo shutdown helper for systems without HAL (bug 4849).
- Avoid a spurious error dialog when using the sudo shutdown helper
  to shut down the system (bug 4849).
- Fix crash in autostart editor when adding a new app (bug 4934).
- Translation updates: el, eu, gl, hu, id, it, pl, ru, tr

4.5.99.1 (Xfce 4.6rc1)
======================

- Translation updates: cs, da, fr, nb_NO, pt_BR, sv, zh_CN.

4.5.93 (Xfce 4.6beta3)
======================

- Don't let autostart get run twice when using the failsafe session
  (bug 4486).
- Display username in logout dialog (bug 3083).
- Ignore DBUS_GERROR_NO_REPLY errors on suspend/hibernate (bug 4629).
- Use xfce_message_dialog() instead of xfce_err() for the Balou config 
  dialog.
- Check for the existence of pwd.h and getpwuid().
- Display the currently logged-in user in the shutdown dialog.
- Properly signal that startup is complete when using the failsafe
  session.
- Translation updates: ca, cs, de, es, eu, fi, fr, hu, id, ja, nb_BO, 
  pt_BR, sq, sv, uk, tr.

4.5.92 (Xfce 4.6beta2)
======================

- Hook up Help button in settings dialog.
- Implement support for the RestartImmediately restart style hint.
- Fix possible crash with uninitialised GError (bug 4202).
- Link libxfsm against all required libs to avoid link-time errors
  (bug 4429).
- Make splash engines store their settings in Xfconf.
- Handle the ProcessID SM property properly.
- Add a session editor to the settings dialog.
- Fix compilation on some Linux systems with a broken linux/ioprio.h
  header (bug 4515).
- Fix a possible crash on amd64 (bug 4510).