@@ -1,10 +1,5 @@
 tipsdir = $(datadir)/xfce4/tips
 
-tips_DATA =								\
-	tips								\
-	tips.dat
-
-tips.dat: $(srcdir)/tips
-	strfile $(srcdir)/tips tips.dat
+tips_DATA =	tips
 
 EXTRA_DIST = $(tips_DATA)
