@@ -3,6 +3,7 @@
 
 - Query HAL to be sure suspend and hibernate are supported.  If not,
   don't even show the buttons (bug 4952).
+- Allow xfce4-tips to work when 'fortune' is not installed (bug 2871).
 
 4.6.1
 =====
